// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Points History List Page View should render Points History Page Correctly 1`] = `
<Fragment>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator="points_history_subheading"
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="semibold"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XL margin-top-LRG"
    text="Points History"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="08/08/19"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="Credit"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="5"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="08/08/19"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="AddBirthDate"
        textDecoration={null}
      />
    </Styled(View)>
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.900"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs12"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text={5}
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
</Fragment>
`;

exports[`Points History List Page View should render Points History Page Correctly if no PointHistory data is available 1`] = `
<Fragment>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator="points_history_subheading"
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="semibold"
    margin={null}
    numberOfLines={null}
    spacingStyles="margin-bottom-XL margin-top-LRG"
    text="Points History"
    textDecoration={null}
  />
</Fragment>
`;
